@@ -3,14 +3,16 @@ Changes in Version 0.6-8 (in development)
 
  o support arrows with panel.segplot.
 
- o changed panel.xblocks() to show data coverage by default.
+ o several changes to panel.xblocks().
 
  o panel.smoother() now omits non-finite values and converts to numeric.
+
+ o glayer() was failing on plots with an existing 'panel.groups'.
 
  o panel.qqmath.tails() is now deprecated as its main functionality
    has been moved into lattice::panel.qqmath().
 
- o glayer() was failing on plots with an existing 'panel.groups'.
+ o use of the 'eval' argument to layer() is now deprecated.
 
  o layer(etc = TRUE) now works in the default case of eval = FALSE.
 
